@@ -1,2 +1,92 @@
 # user-maven
 maven ssm构建简单的登陆页面
+May 06, 2019 9:07:53 PM org.apache.tomcat.util.digester.SetPropertiesRule begin
+WARNING: [SetPropertiesRule]{Server/Service/Engine/Host/Context} Setting property 'source' to 'org.eclipse.jst.j2ee.server:user-web' did not find a matching property.
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: Server version:        Apache Tomcat/8.5.23
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: Server built:          Sep 28 2017 10:30:11 UTC
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: Server number:         8.5.23.0
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: OS Name:               Windows 10
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: OS Version:            10.0
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: Architecture:          amd64
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: Java Home:             C:\Program Files\Java\jdk1.8.0_192\jre
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: JVM Version:           1.8.0_192-b12
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: JVM Vendor:            Oracle Corporation
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: CATALINA_BASE:         C:\Users\18430\eclipse\eclipse\workspace\.metadata\.plugins\org.eclipse.wst.server.core\tmp0
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: CATALINA_HOME:         C:\Users\18430\apache-tomcat-8.5.23-windows-x64\apache-tomcat-8.5.23
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: Command line argument: -Dcatalina.base=C:\Users\18430\eclipse\eclipse\workspace\.metadata\.plugins\org.eclipse.wst.server.core\tmp0
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: Command line argument: -Dcatalina.home=C:\Users\18430\apache-tomcat-8.5.23-windows-x64\apache-tomcat-8.5.23
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: Command line argument: -Dwtp.deploy=C:\Users\18430\eclipse\eclipse\workspace\.metadata\.plugins\org.eclipse.wst.server.core\tmp0\wtpwebapps
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: Command line argument: -Djava.endorsed.dirs=C:\Users\18430\apache-tomcat-8.5.23-windows-x64\apache-tomcat-8.5.23\endorsed
+May 06, 2019 9:07:53 PM org.apache.catalina.startup.VersionLoggerListener log
+INFO: Command line argument: -Dfile.encoding=GBK
+May 06, 2019 9:07:53 PM org.apache.catalina.core.AprLifecycleListener lifecycleEvent
+INFO: The APR based Apache Tomcat Native library which allows optimal performance in production environments was not found on the java.library.path: [C:\Program Files\Java\jdk1.8.0_192\bin;C:\WINDOWS\Sun\Java\bin;C:\WINDOWS\system32;C:\WINDOWS;C:/Program Files/Java/jdk1.8.0_192/bin/../jre/bin/server;C:/Program Files/Java/jdk1.8.0_192/bin/../jre/bin;C:/Program Files/Java/jdk1.8.0_192/bin/../jre/lib/amd64;C:\Program Files\Java\jdk1.8.0_192\bin;C:\Program Files\Java\jre1.8.0_192\lib;C:\Program Files (x86)\Common Files\Oracle\Java\java Update;C:\maven\apache-maven-3.3.3\bin;C:\app\18430\product\11.2.0\dbhome_2\bin;C:\Program Files (x86)\Intel\iCLS Client\;C:\Program Files\Intel\iCLS Client\;C:\WINDOWS\system32;C:\WINDOWS;C:\WINDOWS\System32\Wbem;C:\WINDOWS\System32\WindowsPowerShell\v1.0\;C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL;C:\Program Files\Intel\Intel(R) Management Engine Components\DAL;C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT;C:\Program Files\Intel\Intel(R) Management Engine Components\IPT;C:\Program Files\TortoiseSVN\bin;C:\Program Files\Git\cmd;C:\Program Files (x86)\VisualSVN Server\bin;C:\Program Files\TortoiseGit\bin;C:\WINDOWS\System32\OpenSSH\;C:\Program Files\dotnet\;C:\Program Files\Microsoft SQL Server\130\Tools\Binn\;C:\Users\18430\Downloads\Ant\apache-ant-1.10.5\bin;C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\130\Tools\Binn\;C:\Program Files (x86)\Microsoft SQL Server\140\Tools\Binn\;C:\Program Files\Microsoft SQL Server\140\Tools\Binn\;C:\Program Files\Microsoft SQL Server\140\DTS\Binn\;C:\Program Files (x86)\Microsoft SQL Server\Client SDK\ODBC\130\Tools\Binn\;C:\Program Files (x86)\Microsoft SQL Server\140\DTS\Binn\;C:\Program Files (x86)\Microsoft SQL Server\140\Tools\Binn\ManagementStudio\;C:\Users\18430\AppData\Local\Microsoft\WindowsApps;;C:\Users\18430\eclipse\eclipse;;.]
+May 06, 2019 9:07:54 PM org.apache.coyote.AbstractProtocol init
+INFO: Initializing ProtocolHandler ["http-nio-8080"]
+May 06, 2019 9:07:55 PM org.apache.tomcat.util.net.NioSelectorPool getSharedSelector
+INFO: Using a shared selector for servlet write/read
+May 06, 2019 9:07:55 PM org.apache.coyote.AbstractProtocol init
+INFO: Initializing ProtocolHandler ["ajp-nio-8009"]
+May 06, 2019 9:07:55 PM org.apache.tomcat.util.net.NioSelectorPool getSharedSelector
+INFO: Using a shared selector for servlet write/read
+May 06, 2019 9:07:55 PM org.apache.catalina.startup.Catalina load
+INFO: Initialization processed in 2203 ms
+May 06, 2019 9:07:55 PM org.apache.catalina.core.StandardService startInternal
+INFO: Starting service [Catalina]
+May 06, 2019 9:07:55 PM org.apache.catalina.core.StandardEngine startInternal
+INFO: Starting Servlet Engine: Apache Tomcat/8.5.23
+May 06, 2019 9:08:00 PM org.apache.jasper.servlet.TldScanner scanJars
+INFO: At least one JAR was scanned for TLDs yet contained no TLDs. Enable debug logging for this logger for a complete list of JARs that were scanned but no TLDs were found in them. Skipping unneeded JARs during scanning can improve startup time and JSP compilation time.
+May 06, 2019 9:08:00 PM org.apache.catalina.core.ApplicationContext log
+INFO: No Spring WebApplicationInitializer types detected on classpath
+May 06, 2019 9:08:00 PM org.apache.catalina.core.StandardContext listenerStart
+SEVERE: Error configuring application listener of class [org.springframework.web.context.ContextLoaderListener]
+java.lang.NoClassDefFoundError: Lorg/springframework/beans/factory/access/BeanFactoryReference;
+	at java.lang.Class.getDeclaredFields0(Native Method)
+	at java.lang.Class.privateGetDeclaredFields(Class.java:2583)
+	at java.lang.Class.getDeclaredFields(Class.java:1916)
+	at org.apache.catalina.util.Introspection.getDeclaredFields(Introspection.java:110)
+	at org.apache.catalina.core.DefaultInstanceManager.populateAnnotationsCache(DefaultInstanceManager.java:282)
+	at org.apache.catalina.core.DefaultInstanceManager.newInstance(DefaultInstanceManager.java:142)
+	at org.apache.catalina.core.DefaultInstanceManager.newInstance(DefaultInstanceManager.java:120)
+	at org.apache.catalina.core.StandardContext.listenerStart(StandardContext.java:4667)
+	at org.apache.catalina.core.StandardContext.startInternal(StandardContext.java:5207)
+	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:150)
+	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1419)
+	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1409)
+	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
+	at java.lang.Thread.run(Thread.java:748)
+Caused by: java.lang.ClassNotFoundException: org.springframework.beans.factory.access.BeanFactoryReference
+	at org.apache.catalina.loader.WebappClassLoaderBase.loadClass(WebappClassLoaderBase.java:1291)
+	at org.apache.catalina.loader.WebappClassLoaderBase.loadClass(WebappClassLoaderBase.java:1119)
+	... 16 more
+
+May 06, 2019 9:08:00 PM org.apache.catalina.core.StandardContext listenerStart
+SEVERE: Skipped installing application listeners due to previous error(s)
+May 06, 2019 9:08:00 PM org.apache.catalina.core.StandardContext startInternal
+SEVERE: One or more listeners failed to start. Full details will be found in the appropriate container log file
+May 06, 2019 9:08:00 PM org.apache.catalina.core.StandardContext startInternal
+SEVERE: Context [/user-web] startup failed due to previous errors
+May 06, 2019 9:08:00 PM org.apache.coyote.AbstractProtocol start
+INFO: Starting ProtocolHandler ["http-nio-8080"]
+May 06, 2019 9:08:00 PM org.apache.coyote.AbstractProtocol start
+INFO: Starting ProtocolHandler ["ajp-nio-8009"]
+May 06, 2019 9:08:00 PM org.apache.catalina.startup.Catalina start
+INFO: Server startup in 5468 ms
